# navier-stokes

./: .gitignore  CMakeLists.txt  FluidSolver.cpp  Grid.cpp  Grid.h  README.md  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h
Navier-Stokes/: main.cpp  navierFluid.cpp  navierFluid.h
Navier-Stokes_wSolids/: main  main.cpp  navierFluid.cpp  navierFluid.h
Navier-Stokes_wSolids2/: main  main.cpp  navierFluid.cpp  navierFluid.h  tempCodeRunnerFile.h
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
core/: Config.h  FluidSolver.h  Renderer.cpp  Simulation.cpp  main.cpp
tests/: test_fluid_solver.cpp  test_grid.cpp
